; ModuleID = '/home/carl/AnghaBench/systemd/src/login/extr_logind-session-dbus.c_property_get_idle_since_hint.c'
source_filename = "/home/carl/AnghaBench/systemd/src/login/extr_logind-session-dbus.c_property_get_idle_since_hint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32 }

@DUAL_TIMESTAMP_NULL = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@.str = private unnamed_addr constant [14 x i8] c"IdleSinceHint\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"t\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i8*, i8*, i32*, i8*, i32*)* @property_get_idle_since_hint to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @property_get_idle_since_hint(i32* %0, i8* %1, i8* %2, i8* %3, i32* %4, i8* %5, i32* %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i8*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32*, align 8
  %17 = alloca %struct.TYPE_4__, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  store i32* %0, i32** %9, align 8
  store i8* %1, i8** %10, align 8
  store i8* %2, i8** %11, align 8
  store i8* %3, i8** %12, align 8
  store i32* %4, i32** %13, align 8
  store i8* %5, i8** %14, align 8
  store i32* %6, i32** %15, align 8
  %20 = load i8*, i8** %14, align 8
  %21 = bitcast i8* %20 to i32*
  store i32* %21, i32** %16, align 8
  %22 = bitcast %struct.TYPE_4__* %17 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %22, i8* align 4 bitcast (%struct.TYPE_4__* @DUAL_TIMESTAMP_NULL to i8*), i64 8, i1 false)
  %23 = load i32*, i32** %9, align 8
  %24 = call i32 @assert(i32* %23)
  %25 = load i32*, i32** %13, align 8
  %26 = call i32 @assert(i32* %25)
  %27 = load i32*, i32** %16, align 8
  %28 = call i32 @assert(i32* %27)
  %29 = load i32*, i32** %16, align 8
  %30 = call i32 @session_get_idle_hint(i32* %29, %struct.TYPE_4__* %17)
  store i32 %30, i32* %19, align 4
  %31 = load i32, i32* %19, align 4
  %32 = icmp slt i32 %31, 0
  br i1 %32, label %33, label %35

33:                                               ; preds = %7
  %34 = load i32, i32* %19, align 4
  store i32 %34, i32* %8, align 4
  br label %50

35:                                               ; preds = %7
  %36 = load i8*, i8** %12, align 8
  %37 = call i64 @streq(i8* %36, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %42

39:                                               ; preds = %35
  %40 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 1
  %41 = load i32, i32* %40, align 4
  br label %45

42:                                               ; preds = %35
  %43 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  %44 = load i32, i32* %43, align 4
  br label %45

45:                                               ; preds = %42, %39
  %46 = phi i32 [ %41, %39 ], [ %44, %42 ]
  store i32 %46, i32* %18, align 4
  %47 = load i32*, i32** %13, align 8
  %48 = load i32, i32* %18, align 4
  %49 = call i32 @sd_bus_message_append(i32* %47, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0), i32 %48)
  store i32 %49, i32* %8, align 4
  br label %50

50:                                               ; preds = %45, %33
  %51 = load i32, i32* %8, align 4
  ret i32 %51
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @assert(i32*) #2

declare dso_local i32 @session_get_idle_hint(i32*, %struct.TYPE_4__*) #2

declare dso_local i64 @streq(i8*, i8*) #2

declare dso_local i32 @sd_bus_message_append(i32*, i8*, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
